--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@wojtekmaj/react-daterange-picker": "^3.0.0",
     "axios": "^0.21.0",
     "moment": "^2.29.1",
+    "notistack": "^1.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
